Removed all unused CSV files to lower the JAR file size